data/derived/fa15/progs/unify/prog3710.ml.out
Characters 101-107:
  | Sine sine		    -> sin(eval(sine))
                              ^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
